tests/error/func_alternative_void.gw
#! [contains] void
fun void test(int i) {}
() => test;
